fix: no more banner overlapping

--- a/containers/PageProjectDetails/index.module.scss
+++ b/containers/PageProjectDetails/index.module.scss
@@ -23,28 +23,27 @@
 }
 
 .backdrop {
-  top: 0;
-  position: absolute;
-  z-index: 1;
-  width: 100%;
+  position: relative;
+  width: calc(100% - 112px);
+  margin-left: 56px;
 }
 
 .content {
   position: relative;
-  margin: 375px auto 0 auto;
+  margin: 0 auto;
   z-index: 5;
   max-width: 1440px;
 }
 
 .header {
-  margin: 0 56px 32px 56px;
+  margin: 20px 56px;
 }
 
 .detailsStatsPanels {
   display: flex;
   column-gap: 20px;
   row-gap: 20px;
-  margin: 32px 56px;
+  margin: 20px 56px;
   flex-wrap: wrap;
 }
 
